--- a/stow_home/.config/i3/config
+++ b/stow_home/.config/i3/config
@@ -182,23 +182,16 @@ mode "resize" {
         bindsym $mod+r mode "default"
 }
 bar {
-	status_command i3status --config $HOME/.config/i3/i3status.conf
+	status_command i3status --config ~/.config/i3/i3status.conf
 	position top
-	colors {
-		
-    		background #000000
-    		statusline #FFFFFF
-    		separator  #666666
-
-    		focused_workspace  #4C7899 #285577 #FFFFFF
-    		active_workspace   #333333 #222222 #FFFFFF
-    		inactive_workspace #333333 #222222 #888888
-    		urgent_workspace   #2F343A #900000 #FFFFFF
-    		binding_mode       #2F343A #900000 #FFFFFF
-  	}
 }
 
+
 bindsym $mod+r mode "resize"
+
+#networkmaanger applet
+exec_always --no-startup-id nm-applet
+
 
 # georgian layoout
 exec --no-startup-id setxkbmap us,ge -option 'grp:shifts_toggle'
@@ -206,11 +199,9 @@ exec --no-startup-id setxkbmap us,ge -option 'grp:shifts_toggle'
 # flameshot
 bindsym Print exec "flameshot gui"
 
-# window borders
-#for_window [class="^.*"] border pixel 3
 for_window [class=".*"] title_format "<b>%title</b>"
 
-gaps inner 3
+gaps inner 5
 
 
 
