--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -17,6 +17,9 @@ selection_background    #F2D5CF
 # Cursor colors
 cursor                  #F2D5CF
 cursor_text_color       #303446
+shell_integration no-cursor
+cursor_shape block
+
 
 # URL underline color when hovering with mouse
 url_color               #F2D5CF
