--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,7 +1,7 @@
 font_family FreeMono Bold
 font_size 12
-
-
+shell_integration no-cursor
+cursor_shape block
 
 # BEGIN_KITTY_THEME
 # Catppuccin-Frappe
