--- a/.config/i3/config
+++ b/.config/i3/config
@@ -200,7 +200,7 @@ bindsym $mod+r mode "resize"
 #networkmaanger applet
 exec_always --no-startup-id nm-applet
 
-
+#keyboard configuration
 exec_always --no-startup-id setxkbmap -option altwin:swap_lalt_lwin -option altwin:swap_alt_win
 exec_always --no-startup-id setxkbmap 'us','ge','us(dvorak)' -option 'grp:shifts_toggle' 
 
@@ -212,9 +212,11 @@ for_window [class=".*"] title_format "<b>%title</b>"
 
 gaps inner 5
 
-
 # Make the currently focused window a scratchpad
 bindsym $mod+Shift+minus move scratchpad
 
 # Show the first scratchpad window
 bindsym $mod+minus scratchpad show
+
+#i3lock keybindings
+bindsym $mod+Shift+p exec "~/.config/i3/i3lock.sh"
