--- a/.config/i3/config
+++ b/.config/i3/config
@@ -58,7 +58,7 @@ bindsym $mod+Shift+q kill
 # start dmenu (a program launcher)
 #bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
-bindcode $mod+40 exec "rofi -modi drun,filebrowser,run,ssh,window -show drun"
+bindcode $mod+65 exec "rofi -modi drun,filebrowser,run,ssh,window -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 #bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
@@ -102,10 +102,10 @@ bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
+bindsym $mod+Shift+i floating toggle
 
 # change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
+bindsym $mod+i focus mode_toggle
 
 # focus the parent container
 bindsym $mod+a focus parent
