--- a/.config/i3/config
+++ b/.config/i3/config
@@ -9,7 +9,7 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
-set $mod Mod4
+set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -202,7 +202,7 @@ bindsym $mod+r mode "resize"
 exec_always --no-startup-id nm-applet
 
 #keyboard configuration
-exec_always --no-startup-id setxkbmap -option altwin:swap_lalt_lwin -option altwin:swap_alt_win
+#exec_always --no-startup-id setxkbmap -option altwin:swap_lalt_lwin -option altwin:swap_alt_win
 exec_always --no-startup-id setxkbmap 'us','ge','us(dvorak)' -option 'grp:shifts_toggle' 
 
 
@@ -230,7 +230,7 @@ bindsym $mod+Control+j move workspace to output right
 bindsym $mod+Control+semicolon move workspace to output right
 
 # dual screen configuration
-exec xrandr --output HDMI-0 --auto --right-of DP-1
+exec xrandr --output HDMI-0 --auto --left-of DP-1
 
 # Password manager shortcut
 bindsym $mod+p exec --no-startup-id keepassxc
