--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,6 +2,7 @@ font_family Iosevka
 font_size 12
 shell_integration no-cursor
 cursor_shape block
+# background_opacity 0.9
 
 # BEGIN_KITTY_THEME
 # Catppuccin-Frappe
