--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -23,7 +23,8 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+# resolution configuration for acer nitro 5
+monitor=eDP-1,preferred,auto,1.0
 
 
 ###################
@@ -73,7 +74,6 @@ env = HYPRCURSOR_SIZE,24
 general {
     gaps_in = 3
     gaps_out = 5
-
     border_size = 3
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
@@ -201,7 +201,7 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+
 }
 
 # Example per-device config
@@ -219,7 +219,7 @@ device {
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = ALT # Sets "Windows" key as main modifier
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ fmodor more
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod SHIFT, Q, killactive,
 bind = $mainMod, M, exit,
@@ -230,9 +230,9 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, T, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, SEMICOLON, movefocus, l 
-bind = $mainMod, J, movefocus, r 
-bind = $mainMod, L, movefocus, u 
+bind = $mainMod, SEMICOLON, movefocus, l
+bind = $mainMod, J, movefocus, r
+bind = $mainMod, L, movefocus, u
 bind = $mainMod, K, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
