--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -121,8 +121,8 @@ decoration {
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = yes, please :)
-		# enabled = false
+    # enabled = yes, please :)
+		enabled = false
 
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
@@ -187,13 +187,12 @@ input {
     kb_layout = us,ge
     kb_variant = ,
     kb_model =
-    kb_options = grp:shifts_toggle
+    kb_options = grp:shifts_toggle, caps:swapescape
     kb_rules =
 
     follow_mouse = 1
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-
     touchpad {
         natural_scroll = false
     }
