--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -190,6 +190,8 @@ input {
     kb_options = grp:shifts_toggle, caps:swapescape
     kb_rules =
 
+		repeat_delay = 150
+		repeat_rate = 50
     follow_mouse = 1
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
