add structure change

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,5 +7,5 @@ cursor_shape block
 # BEGIN_KITTY_THEME
 # Catppuccin-Frappe
 include current-theme.conf
-shell /usr/bin/zsh
+shell /usr/bin/bash
 # END_KITTY_THEME
