--- a/i3/config
+++ b/i3/config
@@ -18,7 +18,8 @@ set $mod Mod1
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 8
-font pango: Ubuntu Regular 12
+#font pango: Ubuntu Regular 12
+font pango: Iosevka
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
