--- a/i3/config
+++ b/i3/config
@@ -19,7 +19,7 @@ set $mod Mod1
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 8
 #font pango: Ubuntu Regular 12
-font pango: Iosevka
+font pango: Iosevka Term 12
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
