--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,5 @@
-font_family Iosevka 
-font_size 12
+font_family Iosevka Term
+font_size 14
 shell_integration no-cursor
 cursor_shape block
 # background_opacity 0.9
