--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -13,6 +13,16 @@ order += "memory"
 order += "cpu_usage"
 order += "cpu_temperature 0"
 order += "tztime local"
+order += "battery 1"
+
+battery 1 {
+    format = "%status %percentage %remaining"
+    format_down = "No battery"
+    last_full_capacity = true
+    low_threshold = 10
+    threshold_type = percentage
+		path = "/sys/class/power_supply/BAT1/uevent"
+}
 
 volume master {
     format = " %volume "
