add folding to neovim

--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -6,14 +6,14 @@ general {
     color_bad="#d75f5f"
 }
 
+order += "tztime local"
 order += "volume master"
+order += "battery 1"
 order += "disk /"
 order += "disk /home"
 order += "memory"
 order += "cpu_usage"
 order += "cpu_temperature 0"
-order += "tztime local"
-order += "battery 1"
 
 battery 1 {
     format = "%status %percentage %remaining"
@@ -54,7 +54,7 @@ cpu_temperature 0 {
 }
 
 tztime local {
-        format = " %Y-%m-%d %H:%M:%S "
+        format = " %m-%d-%Y %H:%M:%S "
 }
 
 
