--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -6,14 +6,14 @@ general {
     color_bad="#d75f5f"
 }
 
-order += "tztime local"
-order += "volume master"
-order += "battery 1"
-order += "disk /"
+#order += "disk /"
 order += "disk /home"
 order += "memory"
 order += "cpu_usage"
 order += "cpu_temperature 0"
+order += "battery 1"
+order += "volume master"
+order += "tztime local"
 
 battery 1 {
     format = "%status %percentage %remaining"
@@ -25,8 +25,8 @@ battery 1 {
 }
 
 volume master {
-    format = " %volume "
-    format_muted = " %volume "
+    format = " %volume"
+    format_muted = "%volume "
     device = "default"
     mixer = "Master"
     mixer_idx = 0
@@ -41,9 +41,7 @@ disk "/home" {
 }
 memory {
     format = "  %used"
-
 }
-
 
 cpu_usage {
     format = "  %usage "
@@ -54,7 +52,7 @@ cpu_temperature 0 {
 }
 
 tztime local {
-        format = " %m-%d-%Y %H:%M:%S "
+        format = " %d-%m-%Y %H:%M:%S "
 }
 
 
