--- a/i3/config
+++ b/i3/config
@@ -245,7 +245,7 @@ exec --no-startup-id syncthing
 exec --no-startup-id dunst
 
 #swap esc and caps lock
-exec --no-startup-id setxkbmap -layout us,ge -option caps:swapescape
+exec_always --no-startup-id setxkbmap -layout us,ge -option caps:swapescape
 
 #bluetooth applet
 exec --no-startup-id blueman-applet &
