--- a/i3/config
+++ b/i3/config
@@ -249,3 +249,8 @@ exec_always --no-startup-id setxkbmap -layout us,ge -option caps:swapescape
 
 #bluetooth applet
 exec --no-startup-id blueman-applet &
+
+#app launch keybinds 
+bindsym $mod+d exec thunar
+bindsym $mod+b exec brave
+
